[package]
name = "path-rs"
version = "0.1.0"
edition = "2024"
authors = ["OwOchlé"]
description = "A dependency-less crate for path handling in no_std environments."
license = "MIT"

[dependencies]
serde = { version = "1.0.219", optional = true, features = ["derive"] }

[features]
alloc = []
serde = ["alloc", "dep:serde"]

[dev-dependencies]
rstest = "0.26.1"
